--- a/layouts/partials/home.html
+++ b/layouts/partials/home.html
@@ -1,3 +1,7 @@
+{{ $mainSections := .Site.Params.mainSections | default (slice "post") }}
+{{ $section := where .Site.RegularPages "Section" "in" $mainSections }}
+{{ $section_count := len $section }}
+{{ $n_posts := $.Param "recent_posts_number" | default 6 }}
 <div class="application-main " data-commit-hovercards-enabled>
     <main id="js-pjax-container" data-pjax-container>
         <div class="container-xl clearfix px-3 mt-4">
@@ -9,24 +13,16 @@
                 <div class="UnderlineNav width-full user-profile-nav js-sticky top-0">
                     <nav class="UnderlineNav-body" data-pjax aria-label="User profile">
                         <a aria-current="page" class="UnderlineNav-item mr-0 mr-md-1 mr-lg-3 selected "
-                            data-hydro-click="{&quot;event_type&quot;:&quot;user_profile.click&quot;,&quot;payload&quot;:{&quot;profile_user_id&quot;:16873295,&quot;target&quot;:&quot;TAB_OVERVIEW&quot;,&quot;user_id&quot;:20951666,&quot;client_id&quot;:&quot;137616883.1552221351&quot;,&quot;originating_request_id&quot;:&quot;C856:47CF:BB376B:12A5712:5DAD53A4&quot;,&quot;originating_url&quot;:&quot;https://github.com/763461297&quot;,&quot;referrer&quot;:&quot;https://github.com/MeiK2333?tab=following&quot;}}"
-                            data-hydro-click-hmac="9df4e3de0c3dd80eeaa75e719b9175ee4aa2822f8876d86e483befc5789dea4b"
                             href="{{ .Site.BaseURL }}">
                             Overview
                         </a>
-                        <a class="UnderlineNav-item mr-0 mr-md-1 mr-lg-3 "
-                            data-hydro-click="{&quot;event_type&quot;:&quot;user_profile.click&quot;,&quot;payload&quot;:{&quot;profile_user_id&quot;:16873295,&quot;target&quot;:&quot;TAB_REPOSITORIES&quot;,&quot;user_id&quot;:20951666,&quot;client_id&quot;:&quot;137616883.1552221351&quot;,&quot;originating_request_id&quot;:&quot;C856:47CF:BB376B:12A5712:5DAD53A4&quot;,&quot;originating_url&quot;:&quot;https://github.com/763461297&quot;,&quot;referrer&quot;:&quot;https://github.com/MeiK2333?tab=following&quot;}}"
-                            data-hydro-click-hmac="9f1d1e84e5c4f0cc66aabc39096026b9a0e3a36fc66931de10687715fac5fd7e"
-                            href="">
+                        <a class="UnderlineNav-item mr-0 mr-md-1 mr-lg-3 " href="{{ .Site.BaseURL }}/posts">
                             Posts
                             <span class="Counter hide-lg hide-md hide-sm">
-                                3
+                                {{ $section_count}}
                             </span>
                         </a>
-                        <a class="UnderlineNav-item mr-0 mr-md-1 mr-lg-3 "
-                            data-hydro-click="{&quot;event_type&quot;:&quot;user_profile.click&quot;,&quot;payload&quot;:{&quot;profile_user_id&quot;:16873295,&quot;target&quot;:&quot;TAB_PROJECTS&quot;,&quot;user_id&quot;:20951666,&quot;client_id&quot;:&quot;137616883.1552221351&quot;,&quot;originating_request_id&quot;:&quot;C856:47CF:BB376B:12A5712:5DAD53A4&quot;,&quot;originating_url&quot;:&quot;https://github.com/763461297&quot;,&quot;referrer&quot;:&quot;https://github.com/MeiK2333?tab=following&quot;}}"
-                            data-hydro-click-hmac="4440c050614fb4b19d0bb14a77c7e0fa3875a1109642883d03ec8fffa2ed00f8"
-                            href="/763461297?tab=projects">
+                        <a class="UnderlineNav-item mr-0 mr-md-1 mr-lg-3 " href="{{ .Site.BaseURL }}/about">
                             About
                         </a>
                     </nav>
@@ -40,9 +36,9 @@
 
                             <ol
                                 class="d-flex flex-wrap list-style-none gutter-condensed mb-4 js-pinned-items-reorder-list">
-
+                                {{ range (first $n_posts $section) }}
                                 <li class="col-12 col-md-6 col-lg-6 mb-3 d-flex flex-content-stretch">
-                                    <div
+                                    <div name="pinned-post"
                                         class="Box pinned-item-list-item d-flex p-3 width-full js-pinned-item-list-item public source  sortable-button-item">
                                         <div class="pinned-item-list-item-content">
                                             <div class="d-flex width-full flex-items-center position-relative">
@@ -52,135 +48,30 @@
                                                     <path fill-rule="evenodd"
                                                         d="M4 9H3V8h1v1zm0-3H3v1h1V6zm0-2H3v1h1V4zm0-2H3v1h1V2zm8-1v12c0 .55-.45 1-1 1H6v2l-1.5-1.5L3 16v-2H1c-.55 0-1-.45-1-1V1c0-.55.45-1 1-1h10c.55 0 1 .45 1 1zm-1 10H1v2h2v-1h3v1h5v-2zm0-10H2v9h9V1z" />
                                                 </svg>
-                                                <a href="/763461297/GradePoint"
-                                                    class="text-bold flex-auto min-width-0 ">
+                                                <a href="{{ .URL }}" class="text-bold flex-auto min-width-0 ">
                                                     <span class="repo js-pinnable-item"
-                                                        title="GradePoint">GradePoint</span>
+                                                        title="{{ .Title }}">{{ .Title }}</span>
                                                 </a>
-
                                             </div>
-
-
-                                            <p class="pinned-item-desc text-gray text-small d-block mt-2 mb-3">
-                                                sdut grade point interface
-                                            </p>
-
-                                            <p class="mb-0 f6 text-gray">
-                                                <span class="d-inline-block mr-3">
-                                                    <span class="repo-language-color"
-                                                        style="background-color: #b07219"></span>
-                                                    <span itemprop="programmingLanguage">Java</span>
+                                            {{ .Summary | safeHTML }}
+                                            <div class="f6 text-gray mt-2">
+                                                <span class="mr-3">
+                                                    <svg class="octicon octicon-law mr-1" viewBox="0 0 14 16"
+                                                        version="1.1" width="14" height="16" aria-hidden="true">
+                                                        <path fill-rule="evenodd"
+                                                            d="M7 4c-.83 0-1.5-.67-1.5-1.5S6.17 1 7 1s1.5.67 1.5 1.5S7.83 4 7 4zm7 6c0 1.11-.89 2-2 2h-1c-1.11 0-2-.89-2-2l2-4h-1c-.55 0-1-.45-1-1H8v8c.42 0 1 .45 1 1h1c.42 0 1 .45 1 1H3c0-.55.58-1 1-1h1c0-.55.58-1 1-1h.03L6 5H5c0 .55-.45 1-1 1H3l2 4c0 1.11-.89 2-2 2H2c-1.11 0-2-.89-2-2l2-4H1V5h3c0-.55.45-1 1-1h4c.55 0 1 .45 1 1h3v1h-1l2 4zM2.5 7L1 10h3L2.5 7zM13 10l-1.5-3-1.5 3h3z">
+                                                        </path>
+                                                    </svg>MIT License
                                                 </span>
 
-                                                <a href="/763461297/GradePoint/stargazers"
-                                                    class="pinned-item-meta muted-link ">
-                                                    <svg aria-label="stars" class="octicon octicon-star"
-                                                        viewBox="0 0 14 16" version="1.1" width="14" height="16"
-                                                        role="img">
-                                                        <path fill-rule="evenodd"
-                                                            d="M14 6l-4.9-.64L7 1 4.9 5.36 0 6l3.6 3.26L2.67 14 7 11.67 11.33 14l-.93-4.74L14 6z" />
-                                                    </svg>
-                                                    2
-                                                </a>
-                                            </p>
+                                                Updated <relative-time datetime="{{ .PublishDate.Format "2006-01-02" }}" class="no-wrap"
+                                                    title="Modify at {{ .Lastmod.Format "2006/01/02" }}">
+                                                    {{ .PublishDate.Format "January 2, 2006" }}</relative-time>
+                                            </div>
                                         </div>
                                     </div>
                                 </li>
-
-
-
-                                <li class="col-12 col-md-6 col-lg-6 mb-3 d-flex flex-content-stretch">
-                                    <div
-                                        class="Box pinned-item-list-item d-flex p-3 width-full js-pinned-item-list-item public source  sortable-button-item">
-                                        <div class="pinned-item-list-item-content">
-                                            <div class="d-flex width-full flex-items-center position-relative">
-                                                <svg class="octicon octicon-repo mr-2 text-gray flex-shrink-0"
-                                                    viewBox="0 0 12 16" version="1.1" width="12" height="16"
-                                                    aria-hidden="true">
-                                                    <path fill-rule="evenodd"
-                                                        d="M4 9H3V8h1v1zm0-3H3v1h1V6zm0-2H3v1h1V4zm0-2H3v1h1V2zm8-1v12c0 .55-.45 1-1 1H6v2l-1.5-1.5L3 16v-2H1c-.55 0-1-.45-1-1V1c0-.55.45-1 1-1h10c.55 0 1 .45 1 1zm-1 10H1v2h2v-1h3v1h5v-2zm0-10H2v9h9V1z" />
-                                                </svg>
-                                                <a href="/763461297/Scheduler" class="text-bold flex-auto min-width-0 ">
-                                                    <span class="repo js-pinnable-item"
-                                                        title="Scheduler">Scheduler</span>
-                                                </a>
-
-                                            </div>
-
-
-                                            <p class="pinned-item-desc text-gray text-small d-block mt-2 mb-3">
-                                                Scheduler system - Three salted fish
-                                            </p>
-
-                                            <p class="mb-0 f6 text-gray">
-                                                <span class="d-inline-block mr-3">
-                                                    <span class="repo-language-color"
-                                                        style="background-color: #4F5D95"></span>
-                                                    <span itemprop="programmingLanguage">PHP</span>
-                                                </span>
-
-                                                <a href="/763461297/Scheduler/stargazers"
-                                                    class="pinned-item-meta muted-link ">
-                                                    <svg aria-label="star" class="octicon octicon-star"
-                                                        viewBox="0 0 14 16" version="1.1" width="14" height="16"
-                                                        role="img">
-                                                        <path fill-rule="evenodd"
-                                                            d="M14 6l-4.9-.64L7 1 4.9 5.36 0 6l3.6 3.26L2.67 14 7 11.67 11.33 14l-.93-4.74L14 6z" />
-                                                    </svg>
-                                                    1
-                                                </a>
-                                            </p>
-                                        </div>
-                                    </div>
-                                </li>
-
-
-
-                                <li class="col-12 col-md-6 col-lg-6 mb-3 d-flex flex-content-stretch">
-                                    <div
-                                        class="Box pinned-item-list-item d-flex p-3 width-full js-pinned-item-list-item public source  sortable-button-item">
-                                        <div class="pinned-item-list-item-content">
-                                            <div class="d-flex width-full flex-items-center position-relative">
-                                                <svg class="octicon octicon-repo mr-2 text-gray flex-shrink-0"
-                                                    viewBox="0 0 12 16" version="1.1" width="12" height="16"
-                                                    aria-hidden="true">
-                                                    <path fill-rule="evenodd"
-                                                        d="M4 9H3V8h1v1zm0-3H3v1h1V6zm0-2H3v1h1V4zm0-2H3v1h1V2zm8-1v12c0 .55-.45 1-1 1H6v2l-1.5-1.5L3 16v-2H1c-.55 0-1-.45-1-1V1c0-.55.45-1 1-1h10c.55 0 1 .45 1 1zm-1 10H1v2h2v-1h3v1h5v-2zm0-10H2v9h9V1z" />
-                                                </svg>
-                                                <a href="/763461297/SecuritySteward"
-                                                    class="text-bold flex-auto min-width-0 ">
-                                                    <span class="repo js-pinnable-item"
-                                                        title="SecuritySteward">SecuritySteward</span>
-                                                </a>
-
-                                            </div>
-
-
-                                            <p class="pinned-item-desc text-gray text-small d-block mt-2 mb-3">
-                                                Android project
-                                            </p>
-
-                                            <p class="mb-0 f6 text-gray">
-                                                <span class="d-inline-block mr-3">
-                                                    <span class="repo-language-color"
-                                                        style="background-color: #b07219"></span>
-                                                    <span itemprop="programmingLanguage">Java</span>
-                                                </span>
-
-                                                <a href="/763461297/SecuritySteward/stargazers"
-                                                    class="pinned-item-meta muted-link ">
-                                                    <svg aria-label="star" class="octicon octicon-star"
-                                                        viewBox="0 0 14 16" version="1.1" width="14" height="16"
-                                                        role="img">
-                                                        <path fill-rule="evenodd"
-                                                            d="M14 6l-4.9-.64L7 1 4.9 5.36 0 6l3.6 3.26L2.67 14 7 11.67 11.33 14l-.93-4.74L14 6z" />
-                                                    </svg>
-                                                    1
-                                                </a>
-                                            </p>
-                                        </div>
-                                    </div>
-                                </li>
+                                {{ end }}
                             </ol>
                         </div>
                     </div>
