--- a/layouts/partials/script.html
+++ b/layouts/partials/script.html
@@ -5,3 +5,12 @@
 <script crossorigin="anonymous" async="async"
     integrity="sha512-UjV5G8yJkGcA9OW3TPPQx+Rk3uyOfOVmYEWLj7ADv81bEy8Jp9oDULYFdQxOxJq518DFlt0+dBqobwvarLrNgA=="
     type="application/javascript" src="https://github.githubassets.com/assets/github-bootstrap-35e32afb.js"></script>
+<script>
+    const pinned_posts = document.getElementsByName('pinned-post');
+    const classs = ['pinned-item-desc', 'text-gray', 'text-small', 'd-block', 'mt-2', 'mb-3'];
+    for (let i = 0; i < pinned_posts.length; i++) {
+        for (let j = 0; j < classs.length; j++) {
+            pinned_posts[i].getElementsByTagName('p')[0].classList.add(classs[j]);
+        }
+    }
+</script>
