--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -1,15 +1,12 @@
 {{ define "content" }}
-{{ $data := .Data }}
-<div class="post-warp archive">
-    <h2 class="post-title" style="text-align:right;padding-bottom:2em">-&nbsp;{{ $data.Plural | humanize }}&nbsp;·&nbsp;{{ .Title }}&nbsp;-</h2>
-    {{ range (.Paginate .Pages).Pages }}
-    <article class="archive-item">
-        <a href="{{ .Permalink }}" class="archive-item-link hvr-underline-from-center">{{ .Title }}</a>
-        <span class="archive-item-date">
-            {{ .Date.Format "January 2, 2006" }}
-        </span>
-    </article>
-    {{ end }} 
-    {{ partial "paginator.html" . }}
+<div class="application-main " data-commit-hovercards-enabled>
+    <main id="js-pjax-container" data-pjax-container>
+        <div class="container-xl clearfix px-3 mt-4">
+
+            {{ partial "user-profile.html" . }}
+
+            {{ partial "posts.html" .}}
+
+    </main>
 </div>
 {{end }}
