--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -6,6 +6,7 @@
   {{ partial "header" . }}
   {{ block "content" . }}{{ end }}
   {{ partial "footer.html" . }}
+  {{ template "_internal/google_analytics_async.html" . }}
 </body>
 
 </html>
