--- a/layouts/partials/user-profile.html
+++ b/layouts/partials/user-profile.html
@@ -19,20 +19,22 @@
                 </h1>
             </div>
 
+            {{ if .Site.Params.github }}
             <div class="user-profile-following-container js-user-profile-following-toggle mb-3">
                 <span class="user-following-container js-toggler-container js-social-container">
                     <span class="follow">
                         <input type="button" style="max-width: 100%" value="Follow"
                             class="btn btn-block top-0 js-sticky js-user-profile-follow-button mb-2  js-toggler-target"
-                            title="Follow" onclick="window.open('https://github.com/{{ .Site.Params.github }}')" />
+                            title="Follow" onclick="window.location.href = 'https://github.com/{{ .Site.Params.github }}'" />
                     </span>
                     <span class="unfollow">
                         <input type="button" style="max-width: 100%" value="Unfollow"
                             class="btn btn-block top-0 js-sticky js-user-profile-follow-button mb-2  js-toggler-target"
-                            title="Unfollow" onclick="window.open('https://github.com/{{ .Site.Params.github }}')" />
+                            title="Unfollow" onclick="window.location.href = 'https://github.com/{{ .Site.Params.github }}'" />
                     </span>
                 </span>
             </div>
+            {{ end }}
 
             <div class="d-none d-md-block">
                 <div class="js-profile-editable-area">
