--- a/layouts/partials/posts.html
+++ b/layouts/partials/posts.html
@@ -31,7 +31,7 @@
                     <div class="col-12 col-lg-12 d-inline-block">
                         <div class="d-inline-block mb-1">
                             <h3>
-                                <a href="{{ .URL }}">{{ .Title }}</a>
+                                <a href="{{ .Permalink }}">{{ .Title }}</a>
                             </h3>
                         </div>
 
