--- a/layouts/partials/script.html
+++ b/layouts/partials/script.html
@@ -1,10 +1,8 @@
 <script crossorigin="anonymous"
-    integrity="sha512-P7QbxhTkfogU8wuMH3u9CEiNA9esk13jExiHBnpW+Kh9fKban2yNVEok9xzV2GqSuEU3ZbCKe0GooUfc6szm4g=="
-    type="application/javascript" src="https://github.githubassets.com/assets/frameworks-e0eb4964.js"></script>
+    type="application/javascript" src="{{ "js/frameworks.js" | absURL }}"></script>
 
 <script crossorigin="anonymous" async="async"
-    integrity="sha512-UjV5G8yJkGcA9OW3TPPQx+Rk3uyOfOVmYEWLj7ADv81bEy8Jp9oDULYFdQxOxJq518DFlt0+dBqobwvarLrNgA=="
-    type="application/javascript" src="https://github.githubassets.com/assets/github-bootstrap-35e32afb.js"></script>
+    type="application/javascript" src="{{ "js/github-bootstrap.js" | absURL }}"></script>
 <script>
     let classs = ['pinned-item-desc', 'text-gray', 'text-small', 'd-block', 'mt-2', 'mb-3'];
     const pinned_posts = document.getElementsByName('pinned-post');
