Fix header center

--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -22,7 +22,7 @@
                 </div>
             </div>
         </div>
-        <div class="Header-item Header-item--full flex-justify-center d-lg-none position-relative">
+        <div class="Header-item Header-item--full flex-justify-center d-lg-none position-relative" style="margin-right: auto;">
             <a class="Header-link" href="{{ .Site.BaseURL }}" aria-label="Homepage"
                 data-ga-click="Header, go to dashboard, icon:logo">
                 <svg class="octicon octicon-mark-github v-align-middle" height="32" viewBox="0 0 16 16" version="1.1"
