U: change google-analytics

--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -11,4 +11,5 @@
 
     <link rel="icon" type="image/x-icon" class="js-site-favicon" href="{{ "images/favicon.ico" | absURL }}">
     <meta name="theme-color" content="#1e2327">
+    {{ template "_internal/google_analytics_async.html" . }}
 </head>
