--- a/layouts/partials/user-profile.html
+++ b/layouts/partials/user-profile.html
@@ -5,8 +5,16 @@
     <div class="clearfix mb-2">
         <div class="float-left col-3 col-md-12 pr-3 pr-md-0">
             <a itemprop="image" class="u-photo d-block position-relative" aria-hidden="true"
-                href="{{ "images/avatar.png" | absURL }}"><img alt="" width="260" height="260"
-                    class="avatar width-full height-full rounded-2" src="{{ "images/avatar.png" | absURL }}" /></a>
+                href="{{ "images/avatar.png" | absURL }}">
+                {{ with $.Site.Params.avatar }}
+                <img alt="" width="260" height="260"
+                    class="avatar width-full height-full rounded-2" src="{{ $.Site.Params.avatar  }}" />
+                {{ else }}
+
+                <img alt="" width="260" height="260"
+                    class="avatar width-full height-full rounded-2" src="{{ "images/avatar.png" | absURL }}" />
+                {{ end }}
+            </a>
         </div>
         <div class="float-left col-9 col-md-12 pl-2 pl-md-0">
 
