--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -36,7 +36,11 @@
             <details class="details-overlay details-reset">
                 <summary class="Header-link" aria-label="View profile and more"
                     data-ga-click="Header, show menu, icon:avatar">
+                    {{ with $.Site.Params.avatar }}
+                    <img alt="" class="avatar" src="{{  $.Site.Params.avatar  }}" height="20" width="20">
+                    {{ else }}
                     <img alt="" class="avatar" src="{{ "images/avatar.png" | absURL }}" height="20" width="20">
+                    {{ end }}
                 </summary>
             </details>
         </div>
