--- a/layouts/partials/user-profile.html
+++ b/layouts/partials/user-profile.html
@@ -70,7 +70,7 @@
                                 </path>
                             </svg>
                             {{ if .Site.Params.url }}
-                            <a rel="nofollow me" href="{{ .Site.Params.url }}">{{ .Site.Params.url }}</a> }}</a>
+                            <a rel="nofollow me" href="{{ .Site.Params.url }}">{{ .Site.Params.url }}</a>
                             {{ else }}
                             <a rel="nofollow me" href="{{ .Site.BaseURL }}">{{ .Site.BaseURL }}</a>
                             {{ end }}
