use absURL func

--- a/layouts/partials/post.html
+++ b/layouts/partials/post.html
@@ -5,7 +5,7 @@
                 <div class="repohead-details-container clearfix container-lg p-responsive d-none d-lg-block">
                     <div class="mb-3 d-flex">
                         <h1 class="public css-truncate float-none flex-auto width-fit pl-0">
-                            <a class="avatar mr-1" href="{{ .Site.BaseURL }}about/">
+                            <a class="avatar mr-1" href="{{ absURL "about/" }}">
                             {{ with $.Site.Params.avatar }}
 
                                 <img
