--- a/layouts/partials/user-profile.html
+++ b/layouts/partials/user-profile.html
@@ -92,6 +92,10 @@
                     <img src="{{ "images/twitter.png" | absURL }}" class="avatar" width="35" height="35">
                 </a>
                 {{ end }}
+                <a class="avatar-group-item" data-hovercard-type="organization"
+                                             href="{{ "posts/index.xml" | absURL }}">
+                    <img src="{{ "images/rss.png" | absURL }}" class="avatar" width="38" height="38">
+                </a>
             </div>
 
             <div data-test-selector="profile-sponsorships">
