--- a/layouts/partials/post.html
+++ b/layouts/partials/post.html
@@ -26,8 +26,8 @@
                                     title="Created at {{ .PublishDate.Format "2006/01/02" }}">
                                     {{ .PublishDate.Format "2006-01-02" }}</time-ago>
                                 <span class="file-info-divider"></span>
-                                Modifyd <time-ago datetime="{{ .Lastmod.Format "2006-01-02" }}" class="no-wrap"
-                                    title="Modifyd at {{ .Lastmod.Format "2006/01/02" }}">
+                                Modifyed <time-ago datetime="{{ .Lastmod.Format "2006-01-02" }}" class="no-wrap"
+                                    title="Modifyed  at {{ .Lastmod.Format "2006/01/02" }}">
                                     {{ .Lastmod.Format "2006-01-02" }}</time-ago>
                             </div>
                         </h1>
