--- a/layouts/partials/user-profile.html
+++ b/layouts/partials/user-profile.html
@@ -4,17 +4,20 @@
     </div>
     <div class="clearfix mb-2">
         <div class="float-left col-3 col-md-12 pr-3 pr-md-0">
+            {{ with $.Site.Params.avatar }}
             <a itemprop="image" class="u-photo d-block position-relative" aria-hidden="true"
-                href="{{ "images/avatar.png" | absURL }}">
-                {{ with $.Site.Params.avatar }}
+                href="{{ $.Site.Params.avatar  }}">
                 <img alt="" width="260" height="260"
                     class="avatar width-full height-full rounded-2" src="{{ $.Site.Params.avatar  }}" />
-                {{ else }}
+            </a>
+            {{ else }}
+            <a itemprop="image" class="u-photo d-block position-relative" aria-hidden="true"
+                href="{{ "images/avatar.png" | absURL }}">
 
                 <img alt="" width="260" height="260"
                     class="avatar width-full height-full rounded-2" src="{{ "images/avatar.png" | absURL }}" />
-                {{ end }}
             </a>
+           {{ end }}
         </div>
         <div class="float-left col-9 col-md-12 pl-2 pl-md-0">
 
