--- a/layouts/partials/user-profile.html
+++ b/layouts/partials/user-profile.html
@@ -82,10 +82,12 @@
             <div class="border-top py-3 clearfix hide-sm hide-md">
                 <h2 class="mb-1 h4">Organizations</h2>
 
+                {{ if .Site.Params.github}}
                 <a class="avatar-group-item" data-hovercard-type="organization"
                     href="https://github.com/{{ .Site.Params.github }}">
                     <img src="{{ "images/github.png" | absURL }}" class="avatar" width="35" height="35">
                 </a>
+                {{ end }}
                 {{ if .Site.Params.Twitter}}
                 <a class="avatar-group-item" data-hovercard-type="organization"
                     href="https://twitter.com/{{ .Site.Params.Twitter }}">
