--- a/layouts/partials/overview.html
+++ b/layouts/partials/overview.html
@@ -44,9 +44,9 @@
                                 </div>
                                 {{ .Summary | safeHTML }}
                                 <div class="f6 text-gray mt-2">
-                                    Updated <relative-time datetime="{{ .PublishDate.Format "2006-01-02" }}"
-                                        class="no-wrap" title="Modify at {{ .Lastmod.Format "2006/01/02" }}">
-                                        {{ .PublishDate.Format "January 2, 2006" }}</relative-time>
+                                    Updated <relative-time datetime="{{ .PublishDate.Format "2006-01-02 00:00 +09:00" }}"
+                                        class="no-wrap" title="Modify at {{ .Lastmod.Format "2006-01-02 00:00 +09:00" }}">
+                                        {{ .PublishDate.Format "2006-01-02 00:00 +09:00" }}</relative-time>
                                 </div>
                             </div>
                         </div>
