--- a/layouts/partials/post.html
+++ b/layouts/partials/post.html
@@ -1,8 +1,8 @@
 <div class="application-main " data-commit-hovercards-enabled="">
     <div itemscope="" itemtype="http://schema.org/SoftwareSourceCode" class="">
         <main id="js-repo-pjax-container" data-pjax-container="">
-            <div class="pagehead repohead instapaper_ignore readability-menu experiment-repo-nav pt-0 pt-lg-4 ">
-                <div class="repohead-details-container clearfix container-lg p-responsive d-none d-lg-block">
+            <div class="pagehead repohead instapaper_ignore readability-menu experiment-repo-nav pt-lg-4 "> <!-- pt-0を除去; 小画面でもタイトル表示するため -->
+                <div class="repohead-details-container clearfix container-lg p-responsive d-lg-block"> <!-- d-noneを除去 -->
                     <div class="mb-3 d-flex">
                         <h1 class="public css-truncate float-none flex-auto width-fit pl-0">
                             <a class="avatar mr-1" href="{{ absURL "about/" }}">
@@ -22,12 +22,12 @@
                                     href="{{ .Permalink }}">{{ .Title }}</a></strong>
 
                             <div class="d-block text-small text-gray">
-                                Created <time-ago datetime="{{ .PublishDate.Format "2006-01-02" }}" class="no-wrap"
+                                Created <time-ago datetime="{{ .PublishDate.Format "2006-01-02 00:00 +09:00" }}" class="no-wrap"
                                     title="Created at {{ .PublishDate.Format "2006/01/02" }}">
                                     {{ .PublishDate.Format "2006-01-02" }}</time-ago>
                                 <span class="file-info-divider"></span>
-                                Modifyed <time-ago datetime="{{ .Lastmod.Format "2006-01-02" }}" class="no-wrap"
-                                    title="Modifyed  at {{ .Lastmod.Format "2006/01/02" }}">
+                                Modified <time-ago datetime="{{ .Lastmod.Format "2006-01-02 00:00 +09:00" }}" class="no-wrap"
+                                    title="Modified  at {{ .Lastmod.Format "2006/01/02" }}">
                                     {{ .Lastmod.Format "2006-01-02" }}</time-ago>
                             </div>
                         </h1>
