--- a/layouts/partials/posts.html
+++ b/layouts/partials/posts.html
@@ -40,9 +40,9 @@
                         </div>
 
                         <div class="f6 text-gray mt-2">
-                            Updated <relative-time datetime="{{ .PublishDate.Format "2006-01-02" }}" class="no-wrap"
-                                title="Modifyd at {{ .Lastmod.Format "2006/01/02" }}">
-                                {{ .PublishDate.Format "January 2, 2006" }}</relative-time>
+                            Updated <relative-time datetime="{{ .PublishDate.Format "2006-01-02 00:00 +09:00" }}" class="no-wrap"
+                                title="Modified at {{ .Lastmod.Format "2006/01/02" }}">
+                                {{ .PublishDate.Format "2006-01-02 00:00 +09:00" }}</relative-time>
                         </div>
                     </div>
                 </li>
