modified something - added description of posts and tags to pinned items, posts and post pages - added the site-title to header - added OGP meta tags to head

--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -9,6 +9,20 @@
 
     <title>{{ if .IsHome }}{{ else }}{{ .Title }} - {{ end }}{{ .Site.Title }}</title>
 
+    <!-- OGP -->
+    <meta property="og:url" content="{{ .URL | absURL }}"/>
+    <meta property="og:site_name" content="{{ .Site.Title }}"/>
+    {{ if .IsHome }}
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="{{ .Site.Title }}" />
+    <meta property="og:description" content="{{ .Site.Params.Description }}"/>
+    <meta property="og:image" content="{{ $.Site.Params.avatar }}"/>
+    {{ else }}
+    <meta property="og:type" content="article" />
+    <meta property="og:title" content="{{ .Title }}" />
+    <meta property="og:description" content="{{ .Params.Description }}"/>
+    {{ end }}
+
     <link rel="icon" type="image/x-icon" class="js-site-favicon" href="{{ "images/favicon.ico" | absURL }}">
     <meta name="theme-color" content="#1e2327">
     {{ template "_internal/google_analytics_async.html" . }}
