--- a/layouts/partials/post.html
+++ b/layouts/partials/post.html
@@ -16,17 +16,30 @@
                             {{ end }}
                             </a>
                             <span class="author"><a
-                                    href="{{ .Site.BaseURL }}">{{ .Site.Params.author }}</a></span>
+                                    href="{{ absURL "about/" }}">{{ .Site.Params.author }}</a></span>
                             <span class="path-divider">/</span>
                             <strong itemprop="name" class="css-truncate-target" style="max-width: 410px"><a
                                     href="{{ .Permalink }}">{{ .Title }}</a></strong>
 
+                            {{ with .Params.description }}<div class="text-small text-gray">{{ . }}</div>{{ end }}
+
+                            <!-- display tags -->
+                            <div class="text-small text-gray">
+                                {{ with .Params.tags }}
+                                    <svg class="octicon octicon-tag" viewBox="0 0 14 16" version="1.1" width="14" height="16" aria-hidden="true">
+                                        <path fill-rule="evenodd" d="M7.73 1.73C7.26 1.26 6.62 1 5.96 1H3.5C2.13 1 1 2.13 1 3.5v2.47c0 .66.27 1.3.73 1.77l6.06 6.06c.39.39 1.02.39 1.41 0l4.59-4.59a.996.996 0 000-1.41L7.73 1.73zM2.38 7.09c-.31-.3-.47-.7-.47-1.13V3.5c0-.88.72-1.59 1.59-1.59h2.47c.42 0 .83.16 1.13.47l6.14 6.13-4.73 4.73-6.13-6.15zM3.01 3h2v2H3V3h.01z" />
+                                    </svg>
+                                    {{ range . }} <a href="/tags/{{ . }}/">{{ . }}</a>{{ end }}
+                                {{ end }}
+                            </div>
+
+                            <!-- display timestamp -->
                             <div class="d-block text-small text-gray">
                                 Created <time-ago datetime="{{ .PublishDate.Format "2006-01-02 00:00 +09:00" }}" class="no-wrap"
                                     title="Created at {{ .PublishDate.Format "2006/01/02" }}">
                                     {{ .PublishDate.Format "2006-01-02" }}</time-ago>
                                 <span class="file-info-divider"></span>
-                                Modified <time-ago datetime="{{ .Lastmod.Format "2006-01-02 00:00 +09:00" }}" class="no-wrap"
+                                Updated <time-ago datetime="{{ .Lastmod.Format "2006-01-02 00:00 +09:00" }}" class="no-wrap"
                                     title="Modified  at {{ .Lastmod.Format "2006/01/02" }}">
                                     {{ .Lastmod.Format "2006-01-02" }}</time-ago>
                             </div>
