--- a/layouts/partials/posts.html
+++ b/layouts/partials/posts.html
@@ -49,8 +49,8 @@
                                 </span>
                             {{ end }}
                             <div class="mt-1">
-                                Updated <relative-time datetime="{{ .Lastmod.Format "2006-01-02 00:00 +09:00" }}" class="no-wrap">
-                                    {{ .Lastmod.Format "2006-01-02 00:00 +09:00" }}</relative-time>
+                                Updated <relative-time datetime="{{ .Lastmod.Format "2006-01-02 15:04" }}" class="no-wrap">
+                                    {{ .Lastmod.Format "2006-01-02 15:04" }}</relative-time>
                             </div>
                         </div>
                         </div>
