--- a/layouts/partials/post.html
+++ b/layouts/partials/post.html
@@ -35,13 +35,13 @@
 
                             <!-- display timestamp -->
                             <div class="d-block text-small text-gray">
-                                Created <time-ago datetime="{{ .PublishDate.Format "2006-01-02 00:00 +09:00" }}" class="no-wrap"
-                                    title="Created at {{ .PublishDate.Format "2006/01/02" }}">
-                                    {{ .PublishDate.Format "2006-01-02" }}</time-ago>
+                                Created <time-ago datetime="{{ .PublishDate.Format "2006-01-02 15:04" }}" class="no-wrap"
+                                    title="Created at {{ .PublishDate.Format "2006/01/02 15:04" }}">
+                                    {{ .PublishDate.Format "2006-01-02 15:04" }}</time-ago>
                                 <span class="file-info-divider"></span>
-                                Updated <time-ago datetime="{{ .Lastmod.Format "2006-01-02 00:00 +09:00" }}" class="no-wrap"
-                                    title="Modified  at {{ .Lastmod.Format "2006/01/02" }}">
-                                    {{ .Lastmod.Format "2006-01-02" }}</time-ago>
+                                Updated <time-ago datetime="{{ .Lastmod.Format "2006-01-02 15:04" }}" class="no-wrap"
+                                    title="Modified  at {{ .Lastmod.Format "2006/01/02 15:04" }}">
+                                    {{ .Lastmod.Format "2006-01-02 15:04" }}</time-ago>
                             </div>
                         </h1>
                     </div>
