--- a/layouts/partials/tag-posts.html
+++ b/layouts/partials/tag-posts.html
@@ -11,13 +11,13 @@
             <a aria-current="page" class="UnderlineNav-item mr-0 mr-md-1 mr-lg-3 " href="{{ .Site.BaseURL }}">
                 Overview
             </a>
-            <a class="UnderlineNav-item mr-0 mr-md-1 mr-lg-3 selected" href="{{ absURL "posts/" }}">
+            <a class="UnderlineNav-item mr-0 mr-md-1 mr-lg-3" href="{{ absURL "posts/" }}">
                 Posts
                 <span class="Counter hide-lg hide-md hide-sm">
                     {{ $section_count}}
                 </span>
             </a>
-            <a class="UnderlineNav-item mr-0 mr-md-1 mr-lg-3" href="{{ absURL "tags/" }}">
+            <a class="UnderlineNav-item mr-0 mr-md-1 mr-lg-3 selected" href="{{ absURL "tags/" }}">
                 Tags
                 <span class="Counter hide-lg hide-md hide-sm">
                     {{ len .Site.Taxonomies.tags }}
@@ -32,35 +32,21 @@
     <div class="position-relative">
         <div id="user-repositories-list">
             <ul data-filterable-for="your-repos-filter" data-filterable-type="substring">
-                {{ range .Paginator.Pages }}
+                {{ range $taxonomyname, $taxonomy := .Site.Taxonomies }}
+                {{ range $key, $value := $taxonomy }}
                 <li class="col-12 d-flex width-full py-4 border-bottom public fork">
                     <div class="col-12 col-lg-12 d-inline-block">
                         <div class="d-inline-block mb-1">
                             <h3>
-                                <a href="{{ .Permalink }}">{{ .Title }}</a>
-                            </h3>
-                        </div>
-
-                        <div name="posts-post">
-                            {{ .Description | safeHTML }}
-                        </div>
-
-                        <div class="mb-0 mt-2 f6 text-gray">
-                            {{ with .Params.tags }}
-                                <span class="f6 text-gray mt-1">
-                                    <svg class="octicon octicon-tag" viewBox="0 0 14 16" version="1.1" width="14" height="16" aria-hidden="true">
-                                        <path fill-rule="evenodd" d="M7.73 1.73C7.26 1.26 6.62 1 5.96 1H3.5C2.13 1 1 2.13 1 3.5v2.47c0 .66.27 1.3.73 1.77l6.06 6.06c.39.39 1.02.39 1.41 0l4.59-4.59a.996.996 0 000-1.41L7.73 1.73zM2.38 7.09c-.31-.3-.47-.7-.47-1.13V3.5c0-.88.72-1.59 1.59-1.59h2.47c.42 0 .83.16 1.13.47l6.14 6.13-4.73 4.73-6.13-6.15zM3.01 3h2v2H3V3h.01z" />
-                                    </svg>
-                                    {{ range . }}<a href="/tags/{{ lower . }}/">{{ . }}</a> {{ end }}
+                                <a href="/{{ $taxonomyname | urlize }}/{{ $key | urlize }}">{{ $key }}</a>
+                                <span class="Counter">
+                                    {{ $value.Count }}
                                 </span>
-                            {{ end }}
-                            <div class="mt-1">
-                                Updated <relative-time datetime="{{ .Lastmod.Format "2006-01-02 15:04" }}" class="no-wrap">
-                                    {{ .Lastmod.Format "2006-01-02 15:04" }}</relative-time>
-                            </div>
+                            </h3>
                         </div>
                     </div>
                 </li>
+                {{ end }}
                 {{ end }}
             </ul>
             {{ if gt .Paginator.TotalPages 1}}
