--- a/layouts/partials/about.html
+++ b/layouts/partials/about.html
@@ -17,6 +17,12 @@
                     {{ $section_count}}
                 </span>
             </a>
+            <a class="UnderlineNav-item mr-0 mr-md-1 mr-lg-3" href="{{ absURL "tags/" }}">
+                Tags
+                <span class="Counter hide-lg hide-md hide-sm">
+                    {{ len .Site.Taxonomies.tags }}
+                </span>
+            </a>
             <a class="UnderlineNav-item mr-0 mr-md-1 mr-lg-3 selected" href="{{ absURL "about/" }}">
                 About
             </a>
