--- a/layouts/_default/terms.html
+++ b/layouts/_default/terms.html
@@ -5,7 +5,7 @@
 
             {{ partial "user-profile.html" . }}
 
-            {{ partial "tag-posts.html" . }}
+            {{ partial "tags.html" . }}
 
     </main>
 </div>
