modify 'Pinned' to 'Recent Posts'

--- a/layouts/partials/overview.html
+++ b/layouts/partials/overview.html
@@ -29,7 +29,7 @@
         <div class="mt-4">
             <div class="js-pinned-items-reorder-container">
                 <h2 class="f4 mb-2 text-normal">
-                    Pinned
+                    Recent Posts
                 </h2>
 
                 <ol class="d-flex flex-wrap list-style-none gutter-condensed mb-4 js-pinned-items-reorder-list">
